chore(deps): upgrade deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es6",
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2018",
     "sourceMap": false,
     "outDir": "./dist",
     "rootDir": "./src",
