--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   ],
   "scripts": {
     "start:dev": "tsc -w",
-    "build": "tsc",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
     "prepare": "npm run build",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json -c tslint.json",
@@ -32,28 +33,29 @@
     "url": "https://github.com/nestjsplus/nestjs-package-starter"
   },
   "bugs": "https://github.com/nestjsplus/nestjs-package-starter",
-  "peerDependencies": {
-    "@nestjs/common": "^6.0.0"
-  },
   "dependencies": {},
+  "peerDependencies": {
+    "@nestjs/common": "^7.0.0",
+    "typescript": "^4.0.0"
+  },
   "devDependencies": {
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
-    "@nestjs/platform-express": "^6.0.0",
-    "@nestjs/testing": "6.1.1",
-    "@types/express": "4.16.1",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.13.4",
-    "@types/supertest": "2.0.7",
-    "jest": "24.7.1",
-    "prettier": "1.17.0",
+    "@nestjs/common": "^7.4.4",
+    "@nestjs/core": "^7.4.4",
+    "@nestjs/platform-express": "^7.4.4",
+    "@nestjs/testing": "7.4.4",
+    "@types/express": "4.17.8",
+    "@types/jest": "26.0.12",
+    "@types/node": "14.6.2",
+    "@types/supertest": "2.0.10",
+    "jest": "26.4.2",
+    "prettier": "2.1.1",
     "supertest": "4.0.2",
-    "ts-jest": "24.0.2",
-    "ts-node": "8.1.0",
-    "tsc-watch": "2.2.1",
-    "tsconfig-paths": "3.8.0",
-    "tslint": "5.16.0",
-    "typescript": "3.4.3"
+    "ts-jest": "26.3.0",
+    "ts-node": "9.0.0",
+    "tsc-watch": "4.2.9",
+    "tsconfig-paths": "3.9.0",
+    "tslint": "6.1.3",
+    "typescript": "4.0.2"
   },
   "jest": {
     "moduleFileExtensions": [
